--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ dj-database-url = "*"
 djangorestframework = "*"
 django-summernote = "*"
 django-cors-headers = "*"
+pillow = "*"
 
 [dev-packages]
 
