--- a/Pipfile
+++ b/Pipfile
@@ -14,6 +14,7 @@ django-cors-headers = "*"
 gunicorn = "*"
 django-grappelli = "*"
 django-googledrive-storage = "*"
+pillow = "*"
 
 [dev-packages]
 
